Start JS and fix alignment

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: stretch;
     height: 90%;
     width: 30vw;
 }
@@ -25,6 +26,10 @@ html, body {
 h1, h2 {
     text-align: center;
     margin: 0 auto 5% auto;
+}
+
+h1 {
+    margin-top: 1%;
 }
 
 .buttonsContainer {
@@ -41,6 +46,13 @@ h1, h2 {
     background-color: lightgrey;
 }
 
+#pokemonPicture {
+    display: flex;
+    width: 80%;
+    align-self: center;
+    border: solid 3px black;
+}
+
 #pokemonTypeContainer {
     height: 10%;
 }
@@ -51,9 +63,28 @@ h1, h2 {
     background-color: lightgrey;
     border: solid 1px #505050;
     border-radius: .2em;
+    margin: 0;
+}
+
+#typesLabel {
+    margin: 0;
 }
 
 #pokemonType {
     width: 55%;
     justify-content: space-between;
+}
+
+#pokemonType div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 6.5vw;
+    height: 3.5vh; 
+    border-radius: .2em;  
+}
+
+#pokemonType div span {
+    display: flex;
+    font-size: 2vh;
 }
